# ASEappSurfaceBuilder

./: .gitignore  Guide.md  PACKAGING.md  README.md  VERSIONING.md  environment.yml  requirements.txt  仕様書.md
code/native_ui/: CHANGELOG.txt  CMakeLists.txt  QUICKSTART.txt  README.txt  package_macos.sh  package_windows_launcher.ps1
code/native_ui/assets/samples/: adsorbate_pose_methanol_on_cu.extxyz
code/native_ui/launcher/: launcher.cpp
code/native_ui/src/: AdsorbatePoseSelfTestMain.cpp  AppStartup.cpp  AppStartup.h  ElementStyle.cpp  ElementStyle.h  MainWindow.cpp  MainWindow.h  SingleInstance.cpp  SingleInstance.h  StructureCanvas.cpp  StructureCanvas.h  StructureData.h  StructureFileLoader.cpp  StructureFileLoader.h  SurfaceCustomizationRegistry.cpp  SurfaceCustomizationRegistry.h  SurfaceOperations.cpp  SurfaceOperations.h  app_icons.qrc.in  aseapp_native_ui.rc.in  main.cpp
code/native_ui/tools/: generate_icon_assets.py  install_local_codesign_cert.ps1  test_adsorbate_pose_roundtrip.py
code/native_ui/tools/macos/: ASEapp-macOS-Allow-This-App.command  README-macOS.txt  create_self_signed_codesign_cert.sh
release_notes/: README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md
